[FIX] point card overflow x

--- a/src/student/common/Modal/PointCard.scss
+++ b/src/student/common/Modal/PointCard.scss
@@ -4,7 +4,8 @@ $badColor: #ff5252;
 .point--card {
   &--wrapper {
     display: flex;
-    width: calc(100%-6px);
+    width: 100%;
+    box-sizing: border-box;
     min-height: 4.4375rem;
     padding: 0 1rem 0 1rem;
     border: 3px solid;
